update: 依存関係のアップデート
platform_maps_flutterの設定の追加と、対応しているiosのverが14以降のため、14に修正。

--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   font_awesome_flutter: ^10.7.0
   email_validator: ^3.0.0
+  platform_maps_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
