[update] 位置情報取得のための依存関係のアップデート
位置情報を取得するために、"geolocator"をpub addを行った時の依存関係です

--- a/src/ios/Runner/Info.plist
+++ b/src/ios/Runner/Info.plist
@@ -49,5 +49,13 @@
     <string>This app requires user's location for better user experience.</string>
 	<key>io.flutter.embedded_views_preview</key>
     <true/>
+
+	<!-- geolocator Section -->
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Required to post location information when posting photos and videos.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Required to post location information when posting photos and videos.</string>
+    <!-- End of the geolocator Section -->
+
 </dict>
 </plist>
