--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   email_validator: ^3.0.0
   platform_maps_flutter: ^1.0.2
   geolocator: ^12.0.0
-
+  google_maps_flutter: ^2.9.0
+  flutter_dotenv: ^5.0.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
