--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   email_validator: ^3.0.0
   platform_maps_flutter: ^1.0.2
   geolocator: ^12.0.0
+  cloud_firestore: ^5.1.0
 
 dev_dependencies:
   flutter_test:
