--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -38,10 +38,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   font_awesome_flutter: ^10.7.0
   email_validator: ^3.0.0
-  platform_maps_flutter: ^1.0.2
   geolocator: ^12.0.0
   google_maps_flutter: ^2.9.0
   flutter_dotenv: ^5.0.2
+  google_maps_flutter_platform_interface: ^2.9.1
+  google_maps_flutter_android: ^2.14.5
   
 dev_dependencies:
   flutter_test:
