--- a/src/android/app/build.gradle
+++ b/src/android/app/build.gradle
@@ -50,7 +50,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         manifestPlaceholders += [
-           googleMapApiKey: secretProperties.getProperty('googleMap.apiKey'),
+           googleMapApiKey: secretProperties.getProperty('googleMapApiKey'),
         ]
 
         minSdk = 23
