--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   google_maps_flutter_platform_interface: ^2.9.1
   google_maps_flutter_android: ^2.14.5
+  http: ^1.2.2
   
 dev_dependencies:
   flutter_test:
