--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   google_maps_flutter_platform_interface: ^2.9.1
   google_maps_flutter_android: ^2.14.5
+  nfc_manager: ^3.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
