--- a/src/ios/Runner/Info.plist
+++ b/src/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -24,6 +26,14 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app requires user's location for better user experience.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Required to post location information when posting photos and videos.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Required to post location information when posting photos and videos.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,27 +51,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>This app requires user's location for better user experience.</string>
 	<key>io.flutter.embedded_views_preview</key>
-    <true/>
-
-	<!-- geolocator Section -->
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Required to post location information when posting photos and videos.</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>Required to post location information when posting photos and videos.</string>
-    <!-- End of the geolocator Section -->
-
-	<key>com.apple.developer.nfc.readersession.formats</key>
+	<true/>
+		<key>NFCReaderUsageDescription</key>
+	<string>このアプリではNFCを使用します。</string>
+	<key>com.apple.developer.nfc.readersession.iso7816.select-identifiers</key>
 	<array>
-		<string>NDEF</string>
+		<string>00000000000000</string>
 	</array>
-
-
+	<key>com.apple.developer.nfc.readersession.felica.systemcodes</key>
+	<array>
+		<string>12FC</string>
+	</array>
 </dict>
 </plist>
