--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   supabase_flutter: ^2.8.0
   shared_preferences: ^2.3.2
   sliding_up_panel: ^2.0.0+1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
