--- a/src/ios/Runner/Info.plist
+++ b/src/ios/Runner/Info.plist
@@ -63,5 +63,7 @@
 	<array>
 		<string>12FC</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>カメラを使用してQRコードをスキャンします。</string>
 </dict>
 </plist>
