--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -110,5 +110,6 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/icon_stamcomm.png"
+  image_path_ios: "assets/images/icon_ios.png"
+  image_path_android: "assets/images/icon_android.png"
   remove_alpha_ios: true
