--- a/src/android/app/src/main/AndroidManifest.xml
+++ b/src/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <application
         android:label="StamComm"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true">
         <meta-data 
             android:name="com.google.android.geo.API_KEY" 
             android:value="${googleMapApiKey}"
