--- a/src/ios/Runner/Info.plist
+++ b/src/ios/Runner/Info.plist
@@ -65,5 +65,11 @@
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>カメラを使用してQRコードをスキャンします。</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>フォトライブラリへのアクセスが必要です。</string>
+	<key>NSCameraUsageDescription</key>
+	<string>カメラへのアクセスが必要です。</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>マイクへのアクセスが必要です。</string>
 </dict>
 </plist>
