--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   uuid: ^4.5.1
   qr_code_scanner: ^1.0.1
   flutter_speed_dial: ^7.0.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
