--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
   assets: 
     - lib/images/
     - assets/data/sample_data.json
+    - assets/images/complete.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
